[package]
name = "margaret"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.22", features = ["derive"] }
futures = "0.3.31"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.133"
struct_iterable = "0.1.1"
tokio = { version = "1.42.0", features = ["full"] }
